--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,3 +1,11 @@
-<app-navbar></app-navbar>
-<app-dashboard></app-dashboard>
-<app-footer></app-footer>
+<div id="contenido">
+    <app-navbar></app-navbar>
+    
+    <div class="container-fluid">
+        <router-outlet></router-outlet>
+    </div>
+    
+    <app-footer></app-footer>
+  </div>
+  
+  <app-loader></app-loader>
