--- a/src/app/core/footer/footer.component.css
+++ b/src/app/core/footer/footer.component.css
@@ -1,10 +1,16 @@
-.footer{
-    position: absolute;
+.footer {
+    bottom: 0;
+    left: 0;
+    right: 0;
+    margin-top: 1em;
+    padding: 15px 0;
+    height: 50px;
+    width: 100%;
+    text-align: center;
     color: white;
     background-color: rgb(54, 54, 54);
-    width: 100%;
-    height: 40px;
-    padding-top: 10px;
-    padding-bottom: 10px;
-    text-align: center;
-}
+  }
+
+.fix{
+    position: fixed;
+  }
