--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="footer">
-     Todos Los Derechos Reservados <b> Juan Manuel Sanchez </b>
+<footer class="footer font-weight-bold" [ngClass]="{'fix': fixearPosicion()}"> 
+     Juan Manuel Sánchez
 </footer>
