--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,22 +1,25 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Desafio <b>Analytic</b></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText" aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="navbar-toggler-icon"></span>
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+        aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarText">
       <ul class="navbar-nav mr-auto">
-        <li class="nav-item">
-          <a class="nav-link" href="#">Mapa </a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/mapa"> Mapa </a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Graficos</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/comercios">Comercios</a>
         </li>
-        <li class="nav-item">
-          <a class="nav-link" href="#">Datos</a>
+        <li class="nav-item" routerLinkActive="active">
+          <a class="nav-link" routerLink="/graficos">Graficos</a>
         </li>
       </ul>
       <span class="navbar-text">
-        <a class="nav-link" href="https://www.linkedin.com/in/juan-sanchez-3005/">LinkedIn</a>
+        <a class="nav-link" href="https://www.linkedin.com/in/juan-sanchez-3005/">
+          Linked <img class="logo" src="assets/img/Linkedin.png" alt="linkedin">
+        </a>
       </span>
     </div>
   </nav>
