--- a/src/app/feacture/datos/datos.component.css
+++ b/src/app/feacture/datos/datos.component.css
@@ -1,16 +1,15 @@
 .card{
     margin-top: 30px;
-    width: 230px;
+    margin-left: 30px;
+    width: 293px;
     border-radius: 25px;
-    box-shadow: 2px 2px 10px 4px rgba(0, 0, 0);
+    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0);
 }
 
 .card-header{
+    padding-top: 21px;
     background-color: rgba(21, 224, 174);
     border-top-left-radius: 25px;
-    border-top-right-radius: 25px;
-}
-
-.list-group-item{
-    padding: 0;
+    border-bottom-left-radius: 25px;
+    text-align: center;
 }
