--- a/src/app/feacture/datos/datos.component.html
+++ b/src/app/feacture/datos/datos.component.html
@@ -1,21 +1,17 @@
 <div class="col-sm-12">
     <div class="row card-group">
         <div *ngFor="let item of listCommerces">
-            <div class="col-sm-4">
-                <div class="card text-center">
-                    <div class="card-header">
-                        <strong> {{ item.name }} </strong> <br> NIT: {{ item.nit }} 
-                    </div>
+            <div class="card mb-4" >
+                <div class="row no-gutters">
+                  <div class="card-header col-md-4">
+                    <strong> {{ item.name }} </strong> <br> NIT: {{ item.nit }} <br> Ventas: {{ item.sales }}
+                  </div>
+                  <div class="col-md-8">
                     <div class="card-body">
-                        <h5 class="card-title"> Horario de atención </h5>
-                        <div class="list-group">
-                            <p class="list-group-item">{{ item.days }}</p>
-                            <p class="list-group-item" >{{ item.schedule }}</p>
-                            <p class="list-group-item" >{{ item.sales }}</p>
-                        </div>
-                        <h5 class="card-title"> Información </h5>
-                        <p> {{ item.owner }} Tel: {{ item.phone }} <br> {{ item.address }} </p>
+                      <p class="card-text"> <strong> Horario de atención: </strong>  <br> {{ item.days }} <br> {{ item.schedule }} </p>
+                      <p class="card-text"><small class="text-muted">{{ item.owner }} <br> Tel: {{ item.phone }}</small></p>
                     </div>
+                  </div>
                 </div>
             </div>
         </div>
