Modulo de graficos terminado. Se hace una reestructuración de las tarjetas informativas

--- a/src/app/core/loader/loader.component.scss
+++ b/src/app/core/loader/loader.component.scss
@@ -13,7 +13,7 @@
   
 .loader {
   border: 16px solid #4e4d46; /* Light grey */
-  border-top: 16px solid #00A9CE; /* Blue */
+  border-top: 16px solid #49BEDD; /* Blue */
   border-radius: 50%;
   width: 120px;
   height: 120px;
