--- a/src/app/core/footer/footer.component.html
+++ b/src/app/core/footer/footer.component.html
@@ -1,3 +1,3 @@
-<footer class="footer font-weight-bold" [ngClass]="{'fix': fixearPosicion()}"> 
-     Juan Manuel Sánchez
-</footer>
+<footer class="footer font-weight-bold" [ngClass]="{'fix': fixearPosicion()}">
+     Juan Manuel Sánchez © {{ anio }}
+ </footer>
