--- a/src/app/core/navbar/navbar.component.html
+++ b/src/app/core/navbar/navbar.component.html
@@ -1,6 +1,6 @@
   <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
     <a class="navbar-brand" href="#">Desafio <b>Analytic</b></a>
-    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+    <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
         aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -13,11 +13,11 @@
           <a class="nav-link" routerLink="/comercios">Comercios</a>
         </li>
         <li class="nav-item" routerLinkActive="active">
-          <a class="nav-link" routerLink="/graficos">Graficos</a>
+          <a class="nav-link" routerLink="/graficas">Graficos</a>
         </li>
       </ul>
       <span class="navbar-text">
-        <a class="nav-link" href="https://www.linkedin.com/in/juan-sanchez-3005/">
+        <a class="nav-link" href="https://www.linkedin.com/in/juan-sanchez-3005/" target="_blank">
           Linked <img class="logo" src="assets/img/Linkedin.png" alt="linkedin">
         </a>
       </span>
