--- a/src/app/feacture/datos/datos.component.css
+++ b/src/app/feacture/datos/datos.component.css
@@ -1,15 +1,32 @@
 .card{
+    padding: 5px;
+    text-align: center;
     margin-top: 30px;
     margin-left: 30px;
-    width: 293px;
     border-radius: 25px;
-    box-shadow: 2px 2px 10px 2px rgba(0, 0, 0);
+    box-shadow: 2px 2px 10px 2px rgb(107, 106, 106);
 }
 
-.card-header{
-    padding-top: 21px;
-    background-color: rgba(21, 224, 174);
-    border-top-left-radius: 25px;
-    border-bottom-left-radius: 25px;
+.card-body{
+    padding: 5px;
+}
+
+.card-img-top{
+    position: relative;
     text-align: center;
+    margin: 0;
+    padding: 0;
+    border-radius: 25px;
+}
+
+.card-title{
+    margin-top: 10px;
+}
+
+.card-text{
+    margin: 0;
+}
+
+.card-footer{
+    padding: 0;
 }
